syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.MapThemes";

import "MapThemes/Models.proto";

service MapThemesApi {
  rpc GetByIds(GetMapThemesByIdsRequest) returns (GetMapThemesByIdsResult);
}
